# lipschitz-transformers

./: .env  .gitignore  =3.9  MLP_example.ipynb  README.md  configs.py  data_loaders.py  experiment.ipynb  optimizers.py  pyproject.toml  requirements.txt  run_checkpoint.py  trainer.py  utils.py
.github/workflows/: sphinx.yml
data/: cifar10.py  fineweb.py  mnist.py  shakespeare.py
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: figure-template.ipynb  gpt.ipynb  gradient-accumulation.py  hello-gpt.ipynb  hello-mnist.ipynb  hello-world.ipynb  manifold-muon.ipynb  weight-erasure.ipynb
examples/data/: cifar10.py  shakespeare.py
experiment/: .env  figure-template.ipynb  generate_sweeps.py  generate_sweeps_andrii.py  plot_heatmap.py  plot_observables.py  plot_observables_andrii.ipynb  plot_observables_andrii.py  plot_results_preston_05_10_2025.ipynb  plot_results_preston_05_11_2025.ipynb  plot_results_preston_05_13_2025.ipynb  plot_scales.py  plot_sweep.py  plot_sweep_andrii.py  plot_sweep_andrii_reddots.py  plot_sweep_v2_andrii.py  plot_sweeps_preston.ipynb  plot_sweeps_preston_05_14.ipynb  run_saved_model.py  run_sweep.sbatch  run_sweep_andrii.sbatch  run_sweep_preston.sbatch  run_two_andrii.sh  train.py
experiment/data/: cifar10.py  fineweb.py  (+1 more)
min_train_MLP/: MLP_example.ipynb  configs.py  main.py  models.py  optimizers.py  trainer.py  utils.py
modula/: .atom.py.swp  __init__.py  abstract.py  atom.py  bond.py  compound.py  error.py
nanogpt/: README.md  train_spectral_cap.py  train_spectral_normalize.py
(+16 files in other folders)
