[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modula"
version = "0.0.0.0.0.2"

description = "Numerically sound neural network library."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    "jax[cuda12]",
    "requests",
    "python-dotenv",
    "matplotlib",
    "imageio",
    "psutil",
    "huggingface_hub"
]

[tool.setuptools]
packages = ["modula"]

